--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browser-sync": "^2.27.7",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.15",
+    "debug": "^4.3.3",
     "html-minifier": "^4.0.0",
     "js-yaml": "^4.1.0",
     "luxon": "^2.3.0",
