--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,23 +1,22 @@
+locale: "hu"
 backend:
   # Use netlify identity as backend
   name: git-gateway
   branch: master
-  ### enable below lines for github integration ###
-  # name: github
-  # repo: surjithctly/neat-starter
+
 media_folder: "src/static/img"
 public_folder: "/static/img"
 
 # Please run "npx netlify-cms-proxy-server" for local backend
 local_backend: true
-# publish_mode: editorial_workflow
+publish_mode: editorial_workflow
 collections:
-  - label: "Blog"
-    name: "blog"
-    folder: "src/posts"
+  - label: "Céges referenca"
+    name: "corporate"
+    folder: "src/references/corporate"
     create: true
     editor:
-      preview: false
+      preview: true
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
@@ -27,6 +26,24 @@ collections:
       - widget: select
         label: "tags"
         name: "tags"
-        multiple: true
+        multiple: false
         create: true
-        options: ["Tags", "created", "from", "config.yml"]
+        options: ["post_corporate"]
+  - label: "Fesztivál referenca"
+    name: "festival"
+    folder: "src/references/festivals"
+    create: true
+    editor:
+      preview: true
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Author", name: "author", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Body", name: "body", widget: "markdown" }
+      - widget: select
+        label: "tags"
+        name: "tags"
+        multiple: false
+        create: true
+        options: ["post_festival"]
